bundle/tests/scorecard/kuttl/test3-ingress/cr-install.yaml
apiVersion: mailhog.operators.patrick.mx/v1alpha1
kind: MailhogInstance
metadata:
  name: test3-mh
  labels:
    app: mailhog-kuttl
spec:
  image: 'mailhog/mailhog:latest'
  replicas: 1
  settings:
    storage: memory
  webTrafficInlet: ingress
